# lerobot_robot_ufactory

./: .gitignore  LICENSE  README.md  README_ZH.md  pyproject.toml
config/gello/: xarm5_gello_record_config.yaml  xarm6_gello_record_config.yaml  xarm7_gello_record_config.yaml
config/pika/: pika_record_config.yaml  xarm7_pika_record_config.yaml
config/spacemouse/: xarm7_spacemouse_record_config.yaml
config/umi/: dual_umi_record_config.yaml  dual_xarm6_umi_record_config.yaml  left_xarm6_umi_record_config.yaml  right_xarm6_umi_record_config.yaml  umi_record_config.yaml  xarm6_umi_record_config.yaml
src/lerobot_robot_ufactory/: __init__.py  context.py
src/lerobot_robot_ufactory/cameras/umi_camera/: camera_umi.py
src/lerobot_robot_ufactory/configs/: __init__.py  parser.py
src/lerobot_robot_ufactory/devices/umi/xvlib/: xvlib.py
src/lerobot_robot_ufactory/robots/uf_mock_robot/: multiple_uf_mock_robot.py  multiple_uf_mock_robot_config.py  uf_mock_robot.py  uf_mock_robot_config.py
src/lerobot_robot_ufactory/robots/uf_robot/: multiple_uf_robot.py  multiple_uf_robot_config.py  uf_robot.py  uf_robot_config.py
src/lerobot_robot_ufactory/scripts/: uf_download_resources.py  uf_lerobot_eval.py  uf_lerobot_record.py  uf_robot_teleop.py
src/lerobot_robot_ufactory/teleoperators/base_teleop/: base_teleop.py
src/lerobot_robot_ufactory/teleoperators/gello_teleop/: gello_teleop.py  gello_teleop_config.py
src/lerobot_robot_ufactory/teleoperators/pika_teleop/: pika_teleop.py
src/lerobot_robot_ufactory/teleoperators/space_mouse/: space_mouse_config.py
src/lerobot_robot_ufactory/teleoperators/uf_mock_teleop/: __init__.py  uf_mock_teleop.py  uf_mock_teleop_config.py
src/lerobot_robot_ufactory/teleoperators/umi_teleop/: multiple_umi_teleop.py  multiple_umi_teleop_config.py  umi_teleop.py  umi_teleop_config.py
src/lerobot_robot_ufactory/utils/: utils.py
src/ufactory_lerobot/: __init__.py
src/ufactory_lerobot/cameras/umi_camera/: camera_umi.py  configuration_umi.py
src/ufactory_lerobot/devices/pika/: pika_device.py
src/ufactory_lerobot/devices/umi/vive_tracker/: transformations.py  vive_tracker.py
src/ufactory_lerobot/robots/uf_mock_robot/: multiple_uf_mock_robot.py  multiple_uf_mock_robot_config.py  uf_mock_robot.py  uf_mock_robot_config.py
src/ufactory_lerobot/robots/uf_robot/: __init__.py  multiple_uf_robot_config.py  uf_robot.py  uf_robot_config.py
src/ufactory_lerobot/scripts/: uf_camera_view.py  uf_lerobot_eval.py  uf_lerobot_record.py  uf_robot_teleop.py
src/ufactory_lerobot/teleoperators/base_teleop/: base_teleop.py
src/ufactory_lerobot/teleoperators/gello_teleop/: gello_teleop.py
src/ufactory_lerobot/teleoperators/pika_teleop/: pika_teleop.py  pika_teleop_config.py
src/ufactory_lerobot/teleoperators/space_mouse/: space_mouse.py  space_mouse_config.py
src/ufactory_lerobot/teleoperators/umi_teleop/: multiple_umi_teleop.py  multiple_umi_teleop_config.py  umi_teleop.py  umi_teleop_config.py
src/ufactory_lerobot/utils/: __init__.py  utils.py
ufactory_lerobot/cameras/: utils.py
ufactory_lerobot/cameras/umi_camera/: __init__.py  camera_umi.py
ufactory_lerobot/robots/: utils.py
ufactory_lerobot/robots/uf_mock_robot/: __init__.py  multiple_uf_mock_robot_config.py  uf_mock_robot.py  uf_mock_robot_config.py
ufactory_lerobot/robots/uf_robot/: multiple_uf_robot.py  multiple_uf_robot_config.py  uf_robot.py  uf_robot_config.py
ufactory_lerobot/scripts/: uf_lerobot_eval.py  uf_lerobot_record.py  uf_robot_teleop.py
ufactory_lerobot/teleoperators/: utils.py
ufactory_lerobot/teleoperators/base_teleop/: __init__.py  base_teleop.py
ufactory_lerobot/teleoperators/gello_teleop/: __init__.py  gello_teleop.py  gello_teleop_config.py
ufactory_lerobot/teleoperators/pika_teleop/: __init__.py  pika_teleop.py  pika_teleop_config.py
ufactory_lerobot/teleoperators/space_mouse/: __init__.py  space_mouse_config.py
ufactory_lerobot/teleoperators/uf_mock_teleop/: uf_mock_teleop_config.py
ufactory_lerobot/teleoperators/umi_teleop/: __init__.py  multiple_umi_teleop.py  multiple_umi_teleop_config.py  umi_teleop.py  umi_teleop_config.py
ufactory_lerobot/utils/: utils.py
